--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -38,6 +40,8 @@ dependencies {
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	// https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
 }
 
 tasks.named('test') {
